--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-FIREBASE_PROJECT_ID=mase-a33f5
-FIREBASE_CLIENT_EMAIL=your-client-email
-FIREBASE_PRIVATE_KEY=your-private-key
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAYOVslG4d6WkFHu6kD9hVwnpYBpF3FN0I
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=mase-a33f5.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=mase-a33f5
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=mase-a33f5.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=407255269
+NEXT_PUBLIC_FIREBASE_APP_ID=1:407255269:web:680b98de984ea7cb74bc0c
