Replace Firebase with Supabase

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-FIREBASE_PROJECT_ID=mase-a33f5
-FIREBASE_CLIENT_EMAIL=your-client-email
-FIREBASE_PRIVATE_KEY=your-private-key
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
